--- a/mb/templates/posts/list.html
+++ b/mb/templates/posts/list.html
@@ -11,7 +11,10 @@
             <h5 class="card-title">{{post.title}}</h5>
             <h6 class="card-subtitle mb-2 text-muted">{{post.subtitle}}</h6>
             <p class="card-text">{{post.body | truncatechars:500 }}</p>
+            <p>by {{post.author}}, created on {{post.created_on}}</p>
             <a href="{% url 'detail' post.id %}" class="card-link">Read more...</a>
+            <a href="{% url 'update' post.id %}" class="card-link">Edit Post</a>
+            <a href="{% url 'delete' post.id %}" class="card-link">Delete</a>
             
         </div>
     </div>
